--- a/Content/Modelling and Simulation.tex
+++ b/Content/Modelling and Simulation.tex
@@ -285,12 +285,16 @@ The following equations are used to calculate the center of gravity location ref
 \end{itemize}
 
 \section{Simulation Environment}
-\begin{itemize}
-	\item \textbf{Overview of the Simulation Environment:} A brief overview of the simulation environment, referencing David's Bachelor Thesis for details.
-	
-	
-	\item \textbf{Integration of the Model:} Description of integrating the new TWIPR model into the simulation environment and a summary of the individual components of the model.
-\end{itemize}
+%figure of the simulation environment
+\subsection{Overview of the Simulation Environment}
+\subsection{spaces}
+
+%\begin{itemize}
+%	\item \textbf{Overview of the Simulation Environment:} A brief overview of the simulation environment, referencing David's Bachelor Thesis for details.
+%
+%
+%	\item \textbf{Integration of the Model:} Description of integrating the new TWIPR model into the simulation environment and a summary of the individual components of the model.
+%\end{itemize}
 
 \section{Controller Synthesis}
 %\begin{itemize}
