--- a/Content/Mechanical Assembly.tex
+++ b/Content/Mechanical Assembly.tex
@@ -81,7 +81,8 @@ The motor spacer ring shown in figure \ref{fig:motorspacerring} was used to make
 The frame thickness was added to the length of the new screw to make sure that the screw is not larger than the depth of the mounting point or the motor case may be damaged.
 
 \subsection{Screws and thread inserts}
-The screws and thread inserts used in the assembly are shown in the table\ref{tab:screws}.The precise dimensions of the screws and thread inserts were important to make sure that the assembly process goes smoothly.
+The screws and thread inserts used in the assembly are shown in the table \ref{tab:screws}.
+The precise dimensions of the screws and thread inserts were important to make sure that the assembly process goes smoothly.
 The tolerance of 0.1 mm for the screws was acceptable for the assembly process except for the screws used for the hip and knee motors horns as it could touch the thrust washer and cause damage to the motor.
 
 %table for the screws and thread inserts used in the assembly
@@ -103,7 +104,7 @@ The tolerance of 0.1 mm for the screws was acceptable for the assembly process e
 		Hip Motor side & 8 & M2.5*15 \\
 		Body & 12 & M2.5*6 \\
 		Wheel Motor cover & 20 & M2.5*6 \\
-		thread inserts & 36 & M2.5 x 5.7 \\
+		Thread inserts & 36 & M2.5 x 5.7 \\
 		\bottomrule
 	\end{tabular}
 \end{table}
@@ -154,7 +155,7 @@ then the knee wheel links were assembled to the hip knee links
 	\label{fig:Thread inserts}
 \end{figure}
 
-The thread inserts were inserted into the chassis using a soldering iron as shown in figure \ref{fig:Thread inserts} for the body, knee wheel links and board mounting rack.
+The thread inserts were inserted into the chassis using a soldering iron as shown in figure \ref{fig:Thread inserts} for the body, knee wheel links and the board mounting rack.
 Minimum force was applied to the soldering iron to align the thread inserts surface with the surface of the chassis.
 %two subfigures for mounting the motors on the knee wheel links
 \begin{figure}[h]
@@ -179,7 +180,8 @@ Minimum force was applied to the soldering iron to align the thread inserts surf
 %	\caption{Mounting motors on knee wheel links}
 %	\label{fig:mountingmotorsonkneewheellinks}
 %\end{figure}
-The motors were mounted on the knee wheel links using four screws, as shown in figure \ref{fig:mountingmotorsonkneewheellinks}.
+
+The wheel motors were mounted on the knee wheel links using four screws, as shown in figure \ref{fig:mountingmotorsonkneewheellinks}. The SC040B aluminum extrusion that holds the motor and electronics allows the motor to be mounted on the knee wheel links. free moving air around the motor is important to keep the motor cool and to avoid overheating.
 %two subfigures for mounting the motors on the hip knee links
 \begin{figure}[h]
 	\centering
@@ -219,6 +221,7 @@ The motors were mounted on the knee wheel links using four screws, as shown in f
 	\caption{Assembling knee wheel links and hip knee links}
 	\label{fig:Assembling knee wheel links and hip knee links}
 \end{figure}
+The XM430-W350 motors were mounted into the 
 
 %%figure for assembled knee wheel links and hip knee links
 %\begin{figure}[h]
